[package]
name = "tsoding_4at_simple_multi_User_Chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[[bin]]
name = "event-read"
path = "./src/event-read.rs"

[[bin]]
name = "event-read-char-line"
path = "./src/event-read-char-line.rs"

[dependencies]
crossterm = "0.27.0"
